Improved dark mode experience in home page and responsive navbar, still some dark mode bugs to fix in home page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ html {
 
 @layer base {
   body {
-    @apply bg-[#ecf0f3] text-[#1f2937] tracking-wide dark:bg-gray-900 dark:text-gray-100;
+    @apply bg-[#ecf0f3] text-[#1f2937] tracking-wide dark:bg-black dark:text-white;
   }
 
   h1,
@@ -17,7 +17,7 @@ html {
   h4,
   h5,
   h6 {
-    @apply font-bold;
+    @apply font-bold dark:text-white;
   }
 
   h1 {
@@ -33,6 +33,10 @@ html {
   }
 
   button {
-    @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-green-white-7 to-green-white-3 text-green-white-0;
+    @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-green-white-7 to-green-white-3 text-green-white-0 dark:shadow-green-400;
+  }
+
+  p {
+    @apply dark:text-white;
   }
 }
